Creativity project converted

--- a/site/creativity-project/index.html
+++ b/site/creativity-project/index.html
@@ -793,10 +793,7 @@ id="collection-5bc36fa2652deab94f1f348e">
                             <div class="intrinsic" style="max-width:2150.0px;">
 
                               <div style="padding-bottom:138.18898010253906%;" class="image-block-wrapper lightbox  has-aspect-ratio" data-animation-tier="1" data-description="&lt;p&gt;Study Flow&lt;/p&gt;" data-lightbox-theme="dark">
-                                <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1539575332242-S99HF0TFNNJWIZCNDTKO/ke17ZwdGBToddI8pDm48kPPVBc9r7Jh9Kfu3Ql9DGTl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Ub8jFoHRMBwl9v16IH1nBHZsGGSFW-oDDn_HLjYX-Uci6rk8g15fLUVVwsR7SW1WBA/CR_Flow.jpg"
-                                  alt="Study Flow" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1539575332242-S99HF0TFNNJWIZCNDTKO/ke17ZwdGBToddI8pDm48kPPVBc9r7Jh9Kfu3Ql9DGTl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Ub8jFoHRMBwl9v16IH1nBHZsGGSFW-oDDn_HLjYX-Uci6rk8g15fLUVVwsR7SW1WBA/CR_Flow.jpg"
-                                data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1539575332242-S99HF0TFNNJWIZCNDTKO/ke17ZwdGBToddI8pDm48kPPVBc9r7Jh9Kfu3Ql9DGTl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Ub8jFoHRMBwl9v16IH1nBHZsGGSFW-oDDn_HLjYX-Uci6rk8g15fLUVVwsR7SW1WBA/CR_Flow.jpg"
-                                data-image-dimensions="2150x2817" data-image-focal-point="0.5,0.5" alt="Study Flow" data-load="false" data-image-id="5bc40e1ff9619a73607ddfa3" data-type="image" />
+                                <img src="CR_Flow.jpg" alt="Study Flow" />
                               </div>
 
                               <div class="image-caption-wrapper">
@@ -837,84 +834,21 @@ id="collection-5bc36fa2652deab94f1f348e">
                       </div>
                     </div>
                     <div class="col sqs-col-10 span-10">
-                      <div class="sqs-block gallery-block sqs-block-gallery" data-block-json="&#123;&quot;hSize&quot;:null,&quot;floatDir&quot;:null,&quot;methodOption&quot;:&quot;transient&quot;,&quot;existingGallery&quot;:null,&quot;newWindow&quot;:false,&quot;aspect-ratio&quot;:&quot;four-three&quot;,&quot;aspectRatio&quot;:null,&quot;auto-crop&quot;:true,&quot;collectionId&quot;:&quot;5bcace227817f71f3acb545f&quot;,&quot;design&quot;:&quot;grid&quot;,&quot;lightbox&quot;:false,&quot;padding&quot;:8,&quot;show-meta&quot;:true,&quot;show-meta-basic&quot;:true,&quot;show-meta-only-title&quot;:false,&quot;show-meta-only-description&quot;:false,&quot;square-thumbs&quot;:true,&quot;thumbnails-per-row&quot;:2,&quot;vSize&quot;:null,&quot;transientGalleryId&quot;:&quot;5bcace227817f71f3acb545f&quot;&#125;"
-                      data-block-type="8" id="block-yui_3_17_2_1_1540014462791_416717">
-                        <div class="sqs-block-content">
+                      <div class="sqs-gallery">
 
-                          <div class="
-  sqs-gallery-container
-  sqs-gallery-block-grid
-  sqs-gallery-aspect-ratio-four-three
-  sqs-gallery-thumbnails-per-row-2
-
-  sqs-gallery-block-show-meta
-
-  clear">
-                            <div class="sqs-gallery">
-
-                              <div class="slide" data-type="image" data-animation-tier="1">
-                                <div class="margin-wrapper">
-                                  <a class="image-slide-anchor content-fill">
-                                    <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017700781-PL13Q8JKKWQUEFFGNS6O/ke17ZwdGBToddI8pDm48kAnQhl2pSN4wx3MwuWg7gjR7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UWTK_Rr2arNUv0KuaC1-292ehTIhtSlF9cHy0cfPOSte4DDyWZT642jFTg-vI48MvA/CR+Wire+1.jpg"
-                                      alt="CR Wire 1.jpg" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017700781-PL13Q8JKKWQUEFFGNS6O/ke17ZwdGBToddI8pDm48kAnQhl2pSN4wx3MwuWg7gjR7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UWTK_Rr2arNUv0KuaC1-292ehTIhtSlF9cHy0cfPOSte4DDyWZT642jFTg-vI48MvA/CR+Wire+1.jpg"
-                                    data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017700781-PL13Q8JKKWQUEFFGNS6O/ke17ZwdGBToddI8pDm48kAnQhl2pSN4wx3MwuWg7gjR7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UWTK_Rr2arNUv0KuaC1-292ehTIhtSlF9cHy0cfPOSte4DDyWZT642jFTg-vI48MvA/CR+Wire+1.jpg"
-                                    data-image-dimensions="1959x1536" data-image-focal-point="0.5,0.5" alt="CR Wire 1.jpg" data-load="false" data-image-id="5bcace22104c7bc584603b3f" data-type="image" />
-                                  </a>
-
-                                </div>
-                              </div>
-
-                              <div class="slide" data-type="image" data-animation-tier="1">
-                                <div class="margin-wrapper">
-                                  <a class="image-slide-anchor content-fill">
-                                    <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017700683-D7ZM793BGJZRO70UFYEF/ke17ZwdGBToddI8pDm48kLZMi1QEMVbzJIB5PWtj0xl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Udr2ivLXllmvzTFxe7yPyTi0QS_cGIlwR9DJ-HnnNCjvOfvkt9pdwsjilf1MoZ_hTA/CR+Wire+2.jpg"
-                                      alt="CR Wire 2.jpg" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017700683-D7ZM793BGJZRO70UFYEF/ke17ZwdGBToddI8pDm48kLZMi1QEMVbzJIB5PWtj0xl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Udr2ivLXllmvzTFxe7yPyTi0QS_cGIlwR9DJ-HnnNCjvOfvkt9pdwsjilf1MoZ_hTA/CR+Wire+2.jpg"
-                                    data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017700683-D7ZM793BGJZRO70UFYEF/ke17ZwdGBToddI8pDm48kLZMi1QEMVbzJIB5PWtj0xl7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1Udr2ivLXllmvzTFxe7yPyTi0QS_cGIlwR9DJ-HnnNCjvOfvkt9pdwsjilf1MoZ_hTA/CR+Wire+2.jpg"
-                                    data-image-dimensions="1860x1394" data-image-focal-point="0.5,0.5" alt="CR Wire 2.jpg" data-load="false" data-image-id="5bcace22652deafa3aeb57be" data-type="image" />
-                                  </a>
-
-                                </div>
-                              </div>
-
-                              <div class="slide" data-type="image" data-animation-tier="1">
-                                <div class="margin-wrapper">
-                                  <a class="image-slide-anchor content-fill">
-                                    <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017704762-WHODVTRE1NECR3BXBY0X/ke17ZwdGBToddI8pDm48kHD3lVVCuwsMZ3gSDVYRpCd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UakiLKRrf2z38h-6CoCKRWA-lYWzjNyIObsCAHX_dKSl5xRGc48DGhDdOj1ofCDSxQ/CR+Wire+3.jpg"
-                                      alt="CR Wire 3.jpg" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017704762-WHODVTRE1NECR3BXBY0X/ke17ZwdGBToddI8pDm48kHD3lVVCuwsMZ3gSDVYRpCd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UakiLKRrf2z38h-6CoCKRWA-lYWzjNyIObsCAHX_dKSl5xRGc48DGhDdOj1ofCDSxQ/CR+Wire+3.jpg"
-                                    data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017704762-WHODVTRE1NECR3BXBY0X/ke17ZwdGBToddI8pDm48kHD3lVVCuwsMZ3gSDVYRpCd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UakiLKRrf2z38h-6CoCKRWA-lYWzjNyIObsCAHX_dKSl5xRGc48DGhDdOj1ofCDSxQ/CR+Wire+3.jpg"
-                                    data-image-dimensions="2093x1738" data-image-focal-point="0.5,0.5" alt="CR Wire 3.jpg" data-load="false" data-image-id="5bcace25f4e1fc7e8cdcd0c6" data-type="image" />
-                                  </a>
-
-                                </div>
-                              </div>
-
-                              <div class="slide" data-type="image" data-animation-tier="1">
-                                <div class="margin-wrapper">
-                                  <a class="image-slide-anchor content-fill">
-                                    <noscript><img src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017704449-9MM5Y2PZ03JSE4XHD74Y/ke17ZwdGBToddI8pDm48kMGyGuqhBt8Cd5Fupm5piXJ7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UfJfkHFca_qYc2cu67kX6Jd8WbU6qzayh62Kjb_k7A_g9bu7VQoTB0GxHOffTa1Tag/CR+Wire+4.jpg"
-                                      alt="CR Wire 4.jpg" /></noscript><img class="thumb-image" data-src="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017704449-9MM5Y2PZ03JSE4XHD74Y/ke17ZwdGBToddI8pDm48kMGyGuqhBt8Cd5Fupm5piXJ7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UfJfkHFca_qYc2cu67kX6Jd8WbU6qzayh62Kjb_k7A_g9bu7VQoTB0GxHOffTa1Tag/CR+Wire+4.jpg"
-                                    data-image="https://images.squarespace-cdn.com/content/v1/5b928e47f407b4642d668c5d/1540017704449-9MM5Y2PZ03JSE4XHD74Y/ke17ZwdGBToddI8pDm48kMGyGuqhBt8Cd5Fupm5piXJ7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UfJfkHFca_qYc2cu67kX6Jd8WbU6qzayh62Kjb_k7A_g9bu7VQoTB0GxHOffTa1Tag/CR+Wire+4.jpg"
-                                    data-image-dimensions="1962x1822" data-image-focal-point="0.5,0.5" alt="CR Wire 4.jpg" data-load="false" data-image-id="5bcace25b208fc5920b22aac" data-type="image" />
-                                  </a>
-
-                                </div>
-                              </div>
-
-                            </div>
-
+                        <div class="image-subtitle-wrapper splitHorizontally">
+                          <div>
+                            <img src="CR+Wire+1.jpg" alt="CR Wire 1.jpg" />
                           </div>
-
-                          <style type="text/css" id="design-grid-css">
-                            #block-yui_3_17_2_1_1540014462791_416717 .sqs-gallery-block-grid .sqs-gallery-design-grid {
-                              margin-right: -8px;
-                            }
-
-                            #block-yui_3_17_2_1_1540014462791_416717 .sqs-gallery-block-grid .sqs-gallery-design-grid-slide .margin-wrapper {
-                              margin-right: 8px;
-                              margin-bottom: 8px;
-                            }
-                          </style>
-
+                          <div>
+                            <img src="CR+Wire+2.jpg" alt="CR Wire 2.jpg" />
+                          </div>
+                          <div>
+                            <img src="CR+Wire+3.jpg" alt="CR Wire 3.jpg" />
+                          </div>
+                          <div>
+                            <img src="CR+Wire+4.jpg" alt="CR Wire 4.jpg" />
+                          </div>
                         </div>
                       </div>
                     </div>
