Added ur-eats and blackboard from website

--- a/site/along-those-lines/index.html
+++ b/site/along-those-lines/index.html
@@ -377,188 +377,112 @@ id="collection-5b95d4f06d2a7348d7835e9c">
 
   <div id="canvasWrapper">
     <div id="canvas">
-
       <div id="mobileNav">
         <div class="wrapper">
           <nav class="main-nav mobile-nav">
             <ul>
-
-              <li class="mobile-folder">
-                <a href="/folderux">UX</a>
+              <li class="mobile-folder"> <a href="/folderux">UX</a>
                 <ul>
-
                   <li class="page-collection">
-
+                    <a href="/ur-eats">UR Eats</a>
+                  </li>
+                  <li class="page-collection">
+                    <a href="/blackboard">Blackboard</a>
+                  </li>
+                  <li class="page-collection">
                     <a href="/creativity-project">Creativity Project</a>
-
                   </li>
-
                   <li class="page-collection">
-
                     <a href="/expo">Brooklyn Craft Expo</a>
-
                   </li>
-
-                  <li class="page-collection">
-
-                    <a href="/barter-out">Barter Out</a>
-
-                  </li>
-
                 </ul>
               </li>
-
-              <li class="mobile-folder">
-                <a href="/art-1">ART</a>
+              <li class="mobile-folder"> <a href="/art-1">ART</a>
                 <ul>
-
                   <li class="gallery-collection">
-
                     <a href="/gallery">Gallery</a>
-
                   </li>
-
                   <li class="page-collection">
-
                     <a href="/video">Sound & Video</a>
-
                   </li>
-
                 </ul>
               </li>
-
             </ul>
           </nav>
           <nav class="main-nav mobile-nav">
             <ul>
-
               <li class="page-collection">
-
                 <a href="/about-me">About Me</a>
-
               </li>
-
               <li class="page-collection">
-
                 <a href="/resume-1">Resume</a>
-
               </li>
-
               <li class="page-collection">
-
                 <a href="/contact">Contact</a>
-
               </li>
-
             </ul>
           </nav>
         </div>
       </div>
-
       <div id="headerWrapper">
         <header id="header">
-
           <div id="topNavMobile">
-            <nav id="mobileMenuLink" class="main-nav clear">
+            <nav id="mobileMenuLink" class="main-nav
+        clear">
               <ul>
                 <li class="active-link"><a>Menu</a></li>
               </ul>
             </nav>
           </div>
-
           <div id="logo" data-content-field="site-title">
-
-            <h1 class="logo site-title">
-              <a href="/">
-
-                  Hello, I'm Shagun
-
-              </a>
-            </h1>
-
+            <h1 class="logo site-title"> <a href="/">
+                  Hello, I&#39;m Shagun
+              </a> </h1>
             <div class="logo-subtitle">And this is my story</div>
-
           </div>
-
           <script>
             Y.use('squarespace-ui-base', function(Y) {
               Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
             });
           </script>
-
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
-                <li class="folder-collection folder">
-
+                <li class="folder-collection folder active-link active-folder">
                   <a>UX</a>
                   <div class="subnav">
                     <ul>
-
-                      <li class="page-collection">
-                        <a href="/creativity-project">Creativity Project</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/expo">Brooklyn Craft Expo</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/barter-out">Barter Out</a>
-                      </li>
-
+                      <li class="page-collection"> <a href="/ur-eats">UR Eats</a> </li>
+                      <li class="page-collection"> <a href="/blackboard">Blackboard</a> </li>
+                      <li class="page-collection"> <a href="/creativity-project">Creativity Project</a> </li>
+                      <li class="page-collection"> <a href="/expo">Brooklyn Craft Expo</a> </li>
                     </ul>
                   </div>
-
                 </li>
-
                 <li class="folder-collection folder">
-
                   <a>ART</a>
                   <div class="subnav">
                     <ul>
-
-                      <li class="gallery-collection">
-                        <a href="/gallery">Gallery</a>
+                      <li class="gallery-collection"> <a href="/gallery">Gallery</a>
                       </li>
-
-                      <li class="page-collection">
-                        <a href="/video">Sound & Video</a>
-                      </li>
-
+                      <li class="page-collection"> <a href="/video">Sound & Video</a> </li>
                     </ul>
                   </div>
-
                 </li>
-
               </ul>
-
             </nav>
-
             <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
                 <li class="page-collection">
-
                   <a href="/about-me">About Me</a>
-
                 </li>
-
                 <li class="page-collection">
-
                   <a href="/resume-1">Resume</a>
-
                 </li>
-
                 <li class="page-collection">
-
                   <a href="/contact">Contact</a>
-
                 </li>
-
               </ul>
-
             </nav>
           </div>
 
