--- a/site/expo/index.html
+++ b/site/expo/index.html
@@ -376,87 +376,55 @@ id="collection-5b92ba83cd836647ddb0eb5c">
 
   <div id="canvasWrapper">
     <div id="canvas">
-
       <div id="mobileNav">
         <div class="wrapper">
           <nav class="main-nav mobile-nav">
             <ul>
-
-              <li class="mobile-folder">
-                <a href="/folderux">UX</a>
+              <li class="mobile-folder"> <a href="/folderux">UX</a>
                 <ul>
-
                   <li class="page-collection">
-
+                    <a href="/ur-eats">UR Eats</a>
+                  </li>
+                  <li class="page-collection">
+                    <a href="/blackboard">Blackboard</a>
+                  </li>
+                  <li class="page-collection">
                     <a href="/creativity-project">Creativity Project</a>
-
                   </li>
-
                   <li class="page-collection active-link">
-
                     <a href="/expo">Brooklyn Craft Expo</a>
-
                   </li>
-
-                  <li class="page-collection">
-
-                    <a href="/barter-out">Barter Out</a>
-
-                  </li>
-
                 </ul>
               </li>
-
-              <li class="mobile-folder">
-                <a href="/art-1">ART</a>
+              <li class="mobile-folder"> <a href="/art-1">ART</a>
                 <ul>
-
                   <li class="gallery-collection">
-
                     <a href="/gallery">Gallery</a>
-
                   </li>
-
                   <li class="page-collection">
-
                     <a href="/video">Sound & Video</a>
-
                   </li>
-
                 </ul>
               </li>
-
             </ul>
           </nav>
           <nav class="main-nav mobile-nav">
             <ul>
-
               <li class="page-collection">
-
                 <a href="/about-me">About Me</a>
-
               </li>
-
               <li class="page-collection">
-
                 <a href="/resume-1">Resume</a>
-
               </li>
-
               <li class="page-collection">
-
                 <a href="/contact">Contact</a>
-
               </li>
-
             </ul>
           </nav>
         </div>
       </div>
-
       <div id="headerWrapper">
         <header id="header">
-
           <div id="topNavMobile">
             <nav id="mobileMenuLink" class="main-nav clear">
               <ul>
@@ -464,100 +432,55 @@ id="collection-5b92ba83cd836647ddb0eb5c">
               </ul>
             </nav>
           </div>
-
           <div id="logo" data-content-field="site-title">
-
-            <h1 class="logo site-title">
-              <a href="/">
-
-                  Hello, I'm Shagun
-
-              </a>
-            </h1>
-
+            <h1 class="logo site-title"> <a href="/">
+                  Hello, I&#39;m Shagun
+              </a> </h1>
             <div class="logo-subtitle">And this is my story</div>
-
           </div>
-
           <script>
             Y.use('squarespace-ui-base', function(Y) {
               Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
             });
           </script>
-
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
                 <li class="folder-collection folder active-link active-folder">
-
                   <a>UX</a>
                   <div class="subnav">
                     <ul>
-
-                      <li class="page-collection">
-                        <a href="/creativity-project">Creativity Project</a>
-                      </li>
-
-                      <li class="page-collection active-link">
-                        <a href="/expo">Brooklyn Craft Expo</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/barter-out">Barter Out</a>
-                      </li>
-
+                      <li class="page-collection"> <a href="/ur-eats">UR Eats</a> </li>
+                      <li class="page-collection"> <a href="/blackboard">Blackboard</a> </li>
+                      <li class="page-collection"> <a href="/creativity-project">Creativity Project</a> </li>
+                      <li class="page-collection active-link"> <a href="/expo">Brooklyn Craft Expo</a> </li>
                     </ul>
                   </div>
-
                 </li>
-
                 <li class="folder-collection folder">
-
                   <a>ART</a>
                   <div class="subnav">
                     <ul>
-
-                      <li class="gallery-collection">
-                        <a href="/gallery">Gallery</a>
+                      <li class="gallery-collection"> <a href="/gallery">Gallery</a>
                       </li>
-
-                      <li class="page-collection">
-                        <a href="/video">Sound & Video</a>
-                      </li>
-
+                      <li class="page-collection"> <a href="/video">Sound & Video</a> </li>
                     </ul>
                   </div>
-
                 </li>
-
               </ul>
-
             </nav>
-
             <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
                 <li class="page-collection">
-
                   <a href="/about-me">About Me</a>
-
                 </li>
-
                 <li class="page-collection">
-
                   <a href="/resume-1">Resume</a>
-
                 </li>
-
                 <li class="page-collection">
-
                   <a href="/contact">Contact</a>
-
                 </li>
-
               </ul>
-
             </nav>
           </div>
 
@@ -569,20 +492,20 @@ id="collection-5b92ba83cd836647ddb0eb5c">
 
           <div id="footerBlocks-2" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
 
+            <a href="http://www.linkedin.com/in/shagunbose" target="_blank" class="sqs-svg-icon--wrapper linkedin">
+              <div>
+                <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
+                  <use class="sqs-use--icon" xlink:href="#linkedin-icon"></use>
+                  <use class="sqs-use--mask" xlink:href="#linkedin-mask"></use>
+                </svg>
+              </div>
+            </a>
+
             <a href="https://twitter.com/BoseShagun" target="_blank" class="sqs-svg-icon--wrapper twitter">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
                   <use class="sqs-use--icon" xlink:href="#twitter-icon"></use>
                   <use class="sqs-use--mask" xlink:href="#twitter-mask"></use>
-                </svg>
-              </div>
-            </a>
-
-            <a href="https://github.com/shagunBose" target="_blank" class="sqs-svg-icon--wrapper github">
-              <div>
-                <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-                  <use class="sqs-use--icon" xlink:href="#github-icon"></use>
-                  <use class="sqs-use--mask" xlink:href="#github-mask"></use>
                 </svg>
               </div>
             </a>
@@ -596,11 +519,11 @@ id="collection-5b92ba83cd836647ddb0eb5c">
               </div>
             </a>
 
-            <a href="http://www.linkedin.com/in/shagunbose" target="_blank" class="sqs-svg-icon--wrapper linkedin">
+            <a href="https://github.com/shagunBose" target="_blank" class="sqs-svg-icon--wrapper github">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-                  <use class="sqs-use--icon" xlink:href="#linkedin-icon"></use>
-                  <use class="sqs-use--mask" xlink:href="#linkedin-mask"></use>
+                  <use class="sqs-use--icon" xlink:href="#github-icon"></use>
+                  <use class="sqs-use--mask" xlink:href="#github-mask"></use>
                 </svg>
               </div>
             </a>
