--- a/site/about-me/index.html
+++ b/site/about-me/index.html
@@ -359,241 +359,117 @@
 <body class="sidebar-text-alignment-left sidebar-position-left sidebar-fixed mobile-site-title-style-auto blog-sidebar-right gallery-style-fit enable-gallery-thumbnails initial-gallery-view-thumbnails homepage-gallery-view-inherit thumbnail-aspect-ratio-auto gallery-controls-simple social-icon-style-normal hide-social-icons  show-category-navigation   event-show-past-events event-thumbnails event-thumbnail-size-32-standard event-date-label  event-list-show-cats event-list-date event-list-time event-list-address   event-icalgcal-links  event-excerpts  event-item-back-link    product-list-titles-under product-list-alignment-center product-item-size-23-standard-vertical product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing tweak-v1-related-products-image-aspect-ratio-11-square tweak-v1-related-products-details-alignment-center newsletter-style-dark hide-opentable-icons opentable-style-dark small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-solid button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd collection-type-page collection-5b92949c898583d1de84fb5a collection-layout-default mobile-style-available"
 id="collection-5b92949c898583d1de84fb5a">
 
-  <div id="canvasWrapper">
-    <div id="canvas">
-
-      <div id="mobileNav">
-        <div class="wrapper">
-          <nav class="main-nav mobile-nav">
+<div id="canvasWrapper">
+  <div id="canvas">
+    <div id="mobileNav">
+      <div class="wrapper">
+        <nav class="main-nav mobile-nav">
+          <ul>
+            <li class="mobile-folder"> <a href="/folderux">UX</a>
+              <ul>
+                <li class="page-collection">
+                  <a href="/ur-eats">UR Eats</a>
+                </li>
+                <li class="page-collection">
+                  <a href="/blackboard">Blackboard</a>
+                </li>
+                <li class="page-collection">
+                  <a href="/creativity-project">Creativity Project</a>
+                </li>
+                <li class="page-collection">
+                  <a href="/expo">Brooklyn Craft Expo</a>
+                </li>
+              </ul>
+            </li>
+            <li class="mobile-folder"> <a href="/art-1">ART</a>
+              <ul>
+                <li class="gallery-collection">
+                  <a href="/gallery">Gallery</a>
+                </li>
+                <li class="page-collection">
+                  <a href="/video">Sound & Video</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <nav class="main-nav mobile-nav">
+          <ul>
+            <li class="page-collection">
+              <a href="/about-me">About Me</a>
+            </li>
+            <li class="page-collection">
+              <a href="/resume-1">Resume</a>
+            </li>
+            <li class="page-collection">
+              <a href="/contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div id="headerWrapper">
+      <header id="header">
+        <div id="topNavMobile">
+          <nav id="mobileMenuLink" class="main-nav clear">
             <ul>
-
-              <li class="mobile-folder">
-                <a href="/folderux">UX</a>
-                <ul>
-
-                  <li class="page-collection">
-
-                    <a href="/creativity-project">Creativity Project</a>
-
-                  </li>
-
-                  <li class="page-collection">
-
-                    <a href="/expo">Brooklyn Craft Expo</a>
-
-                  </li>
-
-                  <li class="page-collection">
-
-                    <a href="/barter-out">Barter Out</a>
-
-                  </li>
-
-                </ul>
-              </li>
-
-              <li class="mobile-folder">
-                <a href="/art-1">ART</a>
-                <ul>
-
-                  <li class="gallery-collection">
-
-                    <a href="/gallery">Gallery</a>
-
-                  </li>
-
-                  <li class="page-collection">
-
-                    <a href="/video">Sound & Video</a>
-
-                  </li>
-
-                </ul>
-              </li>
-
-            </ul>
-          </nav>
-          <nav class="main-nav mobile-nav">
-            <ul>
-
-              <li class="page-collection active-link">
-
-                <a href="/about-me">About Me</a>
-
-              </li>
-
-              <li class="page-collection">
-
-                <a href="/resume-1">Resume</a>
-
-              </li>
-
-              <li class="page-collection">
-
-                <a href="/contact">Contact</a>
-
-              </li>
-
+              <li class="active-link"><a>Menu</a></li>
             </ul>
           </nav>
         </div>
-      </div>
-
-      <div id="headerWrapper">
-        <header id="header">
-
-          <div id="topNavMobile">
-            <nav id="mobileMenuLink" class="main-nav clear">
-              <ul>
-                <li class="active-link"><a>Menu</a></li>
-              </ul>
-            </nav>
-          </div>
-
-          <div id="logo" data-content-field="site-title">
-
-            <h1 class="logo site-title">
-              <a href="/">
-
-                  Hello, I'm Shagun
-
-              </a>
-            </h1>
-
-            <div class="logo-subtitle">And this is my story</div>
-
-          </div>
-
-          <script>
-            Y.use('squarespace-ui-base', function(Y) {
-              Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
-            });
-          </script>
-
-          <div id="topNav" data-content-field="navigation">
-            <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
-              <ul>
-
-                <li class="folder-collection folder">
-
-                  <a>UX</a>
-                  <div class="subnav">
-                    <ul>
-
-                      <li class="page-collection">
-                        <a href="/creativity-project">Creativity Project</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/expo">Brooklyn Craft Expo</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/barter-out">Barter Out</a>
-                      </li>
-
-                    </ul>
-                  </div>
-
-                </li>
-
-                <li class="folder-collection folder">
-
-                  <a>ART</a>
-                  <div class="subnav">
-                    <ul>
-
-                      <li class="gallery-collection">
-                        <a href="/gallery">Gallery</a>
-                      </li>
-
-                      <li class="page-collection">
-                        <a href="/video">Sound & Video</a>
-                      </li>
-
-                    </ul>
-                  </div>
-
-                </li>
-
-              </ul>
-
-            </nav>
-
-            <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
-              <ul>
-
-                <li class="page-collection active-link">
-
-                  <a href="/about-me">About Me</a>
-
-                </li>
-
-                <li class="page-collection">
-
-                  <a href="/resume-1">Resume</a>
-
-                </li>
-
-                <li class="page-collection">
-
-                  <a href="/contact">Contact</a>
-
-                </li>
-
-              </ul>
-
-            </nav>
-          </div>
-
-          <div class="sqs-layout sqs-grid-1 columns-1 empty" data-layout-label="Header Content" data-type="block-field" id="headerBlocks">
-            <div class="row sqs-row">
-              <div class="col sqs-col-1 span-1"></div>
-            </div>
-          </div>
-
-          <div id="footerBlocks-2" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
-
-            <a href="http://www.linkedin.com/in/shagunbose" target="_blank" class="sqs-svg-icon--wrapper linkedin">
-              <div>
-                <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-                  <use class="sqs-use--icon" xlink:href="#linkedin-icon"></use>
-                  <use class="sqs-use--mask" xlink:href="#linkedin-mask"></use>
-                </svg>
-              </div>
-            </a>
-
-            <a href="https://twitter.com/BoseShagun" target="_blank" class="sqs-svg-icon--wrapper twitter">
-              <div>
-                <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-                  <use class="sqs-use--icon" xlink:href="#twitter-icon"></use>
-                  <use class="sqs-use--mask" xlink:href="#twitter-mask"></use>
-                </svg>
-              </div>
-            </a>
-
-            <a href="https://dribbble.com/shagunbose" target="_blank" class="sqs-svg-icon--wrapper dribbble">
-              <div>
-                <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-                  <use class="sqs-use--icon" xlink:href="#dribbble-icon"></use>
-                  <use class="sqs-use--mask" xlink:href="#dribbble-mask"></use>
-                </svg>
-              </div>
-            </a>
-
-            <a href="https://github.com/shagunBose" target="_blank" class="sqs-svg-icon--wrapper github">
-              <div>
-                <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
-                  <use class="sqs-use--icon" xlink:href="#github-icon"></use>
-                  <use class="sqs-use--mask" xlink:href="#github-mask"></use>
-                </svg>
-              </div>
-            </a>
-
-          </div>
-
-        </header>
-      </div>
+        <div id="logo" data-content-field="site-title">
+          <h1 class="logo site-title"> <a href="/">
+                Hello, I&#39;m Shagun
+            </a> </h1>
+          <div class="logo-subtitle">And this is my story</div>
+        </div>
+        <script>
+          Y.use('squarespace-ui-base', function(Y) {
+            Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
+          });
+        </script>
+        <div id="topNav" data-content-field="navigation">
+          <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
+            <ul>
+              <li class="folder-collection folder active-folder">
+                <a>UX</a>
+                <div class="subnav">
+                  <ul>
+                    <li class="page-collection"> <a href="/ur-eats">UR Eats</a> </li>
+                    <li class="page-collection"> <a href="/blackboard">Blackboard</a> </li>
+                    <li class="page-collection"> <a href="/creativity-project">Creativity Project</a> </li>
+                    <li class="page-collection"> <a href="/expo">Brooklyn Craft Expo</a> </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="folder-collection folder">
+                <a>ART</a>
+                <div class="subnav">
+                  <ul>
+                    <li class="gallery-collection"> <a href="/gallery">Gallery</a>
+                    </li>
+                    <li class="page-collection"> <a href="/video">Sound & Video</a> </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </nav>
+          <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
+            <ul>
+              <li class="page-collection active-link">
+                <a href="/about-me">About Me</a>
+              </li>
+              <li class="page-collection">
+                <a href="/resume-1">Resume</a>
+              </li>
+              <li class="page-collection">
+                <a href="/contact">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+    </div>
 
       <div id="pageWrapper" class="hfeed" role="main">
         <!-- CATEGORY NAV -->
