--- a/site/barter-out/index.html
+++ b/site/barter-out/index.html
@@ -376,27 +376,27 @@ id="collection-5bc382cd0852293bddef90ab">
 
   <div id="canvasWrapper">
     <div id="canvas">
-
       <div id="mobileNav">
         <div class="wrapper">
           <nav class="main-nav mobile-nav">
             <ul>
-              <li class="mobile-folder">
-                <a href="/folderux">UX</a>
+              <li class="mobile-folder"> <a href="/folderux">UX</a>
                 <ul>
+                  <li class="page-collection">
+                    <a href="/ur-eats">UR Eats</a>
+                  </li>
+                  <li class="page-collection">
+                    <a href="/blackboard">Blackboard</a>
+                  </li>
                   <li class="page-collection">
                     <a href="/creativity-project">Creativity Project</a>
                   </li>
                   <li class="page-collection">
                     <a href="/expo">Brooklyn Craft Expo</a>
                   </li>
-                  <li class="page-collection active-link">
-                    <a href="/barter-out">Barter Out</a>
-                  </li>
                 </ul>
               </li>
-              <li class="mobile-folder">
-                <a href="/art-1">ART</a>
+              <li class="mobile-folder"> <a href="/art-1">ART</a>
                 <ul>
                   <li class="gallery-collection">
                     <a href="/gallery">Gallery</a>
@@ -405,8 +405,6 @@ id="collection-5bc382cd0852293bddef90ab">
                     <a href="/video">Sound & Video</a>
                   </li>
                 </ul>
-              </li>
-            </ul>
           </nav>
           <nav class="main-nav mobile-nav">
             <ul>
@@ -426,27 +424,24 @@ id="collection-5bc382cd0852293bddef90ab">
       <div id="headerWrapper">
         <header id="header">
           <div id="topNavMobile">
-            <nav id="mobileMenuLink" class="main-nav clear">
+            <nav id="mobileMenuLink" class="main-nav
+        clear">
               <ul>
                 <li class="active-link"><a>Menu</a></li>
               </ul>
             </nav>
           </div>
           <div id="logo" data-content-field="site-title">
-            <h1 class="logo site-title">
-              <a href="/">
-                  Hello, I'm Shagun
-              </a>
-            </h1>
+            <h1 class="logo site-title"> <a href="/">
+                  Hello, I&#39;m Shagun
+              </a> </h1>
             <div class="logo-subtitle">And this is my story</div>
           </div>
-
           <script>
             Y.use('squarespace-ui-base', function(Y) {
               Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
             });
           </script>
-
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
@@ -454,15 +449,10 @@ id="collection-5bc382cd0852293bddef90ab">
                   <a>UX</a>
                   <div class="subnav">
                     <ul>
-                      <li class="page-collection">
-                        <a href="/creativity-project">Creativity Project</a>
-                      </li>
-                      <li class="page-collection">
-                        <a href="/expo">Brooklyn Craft Expo</a>
-                      </li>
-                      <li class="page-collection active-link">
-                        <a href="/barter-out">Barter Out</a>
-                      </li>
+                      <li class="page-collection"> <a href="/ur-eats">UR Eats</a> </li>
+                      <li class="page-collection"> <a href="/blackboard">Blackboard</a> </li>
+                      <li class="page-collection"> <a href="/creativity-project">Creativity Project</a> </li>
+                      <li class="page-collection"> <a href="/expo">Brooklyn Craft Expo</a> </li>
                     </ul>
                   </div>
                 </li>
@@ -470,18 +460,16 @@ id="collection-5bc382cd0852293bddef90ab">
                   <a>ART</a>
                   <div class="subnav">
                     <ul>
-                      <li class="gallery-collection">
-                        <a href="/gallery">Gallery</a>
+                      <li class="gallery-collection"> <a href="/gallery">Gallery</a>
                       </li>
-                      <li class="page-collection">
-                        <a href="/video">Sound & Video</a>
-                      </li>
+                      <li class="page-collection"> <a href="/video">Sound & Video</a> </li>
                     </ul>
                   </div>
                 </li>
               </ul>
             </nav>
-            <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
+            <nav id="secondaryNavigation" class="main-nav dropdown-click
+          desktop-nav">
               <ul>
                 <li class="page-collection">
                   <a href="/about-me">About Me</a>
@@ -497,10 +485,13 @@ id="collection-5bc382cd0852293bddef90ab">
           </div>
           <div class="sqs-layout sqs-grid-1 columns-1 empty" data-layout-label="Header Content" data-type="block-field" id="headerBlocks">
             <div class="row sqs-row">
-              <div class="col sqs-col-1 span-1"></div>
+              <div class="col sqs-col-1
+        span-1"></div>
             </div>
           </div>
+
           <div id="footerBlocks-2" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
+
             <a href="http://www.linkedin.com/in/shagunbose" target="_blank" class="sqs-svg-icon--wrapper linkedin">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -509,6 +500,7 @@ id="collection-5bc382cd0852293bddef90ab">
                 </svg>
               </div>
             </a>
+
             <a href="https://twitter.com/BoseShagun" target="_blank" class="sqs-svg-icon--wrapper twitter">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -517,6 +509,7 @@ id="collection-5bc382cd0852293bddef90ab">
                 </svg>
               </div>
             </a>
+
             <a href="https://dribbble.com/shagunbose" target="_blank" class="sqs-svg-icon--wrapper dribbble">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -525,6 +518,7 @@ id="collection-5bc382cd0852293bddef90ab">
                 </svg>
               </div>
             </a>
+
             <a href="https://github.com/shagunBose" target="_blank" class="sqs-svg-icon--wrapper github">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -533,7 +527,9 @@ id="collection-5bc382cd0852293bddef90ab">
                 </svg>
               </div>
             </a>
+
           </div>
+
         </header>
       </div>
       <div id="pageWrapper" class="hfeed" role="main">
