--- a/site/gallery/index.html
+++ b/site/gallery/index.html
@@ -369,161 +369,48 @@ id="collection-5c0f4de989858336ab2a0c0c">
 
   <div id="canvasWrapper">
     <div id="canvas">
-
       <div id="mobileNav">
         <div class="wrapper">
           <nav class="main-nav mobile-nav">
             <ul>
-
-
-
-
               <li class="mobile-folder">
                 <a href="/folderux">UX</a>
                 <ul>
-
-
                   <li class="page-collection">
-
-
                     <a href="/creativity-project">Creativity Project</a>
-
-
-
-
                   </li>
-
-
-
                   <li class="page-collection">
-
-
                     <a href="/expo">Brooklyn Craft Expo</a>
-
-
-
-
                   </li>
-
-
-
                   <li class="page-collection">
-
-
                     <a href="/barter-out">Barter Out</a>
-
-
-
-
                   </li>
-
-
                 </ul>
               </li>
-
-
-
-
-
-
-
-
-
               <li class="mobile-folder">
                 <a href="/art-1">ART</a>
                 <ul>
-
-
-                  <li class="gallery-collection active-link">
-
-
+                  <li class="gallery-collection">
                     <a href="/gallery">Gallery</a>
-
-
-
-
                   </li>
-
-
-
-                  <li class="page-collection">
-
-
+                  <li class="page-collection active-link">
                     <a href="/video">Sound & Video</a>
-
-
-
-
                   </li>
-
-
                 </ul>
               </li>
-
-
-
-
-
-
             </ul>
           </nav>
           <nav class="main-nav mobile-nav">
             <ul>
-
-
-
-
               <li class="page-collection">
-
-
                 <a href="/about-me">About Me</a>
-
-
-
-
               </li>
-
-
-
-
-
-
-
-
-
               <li class="page-collection">
-
-
                 <a href="/resume-1">Resume</a>
-
-
-
-
               </li>
-
-
-
-
-
-
-
-
-
               <li class="page-collection">
-
-
                 <a href="/contact">Contact</a>
-
-
-
-
               </li>
-
-
-
-
-
-
             </ul>
           </nav>
         </div>
@@ -531,7 +418,6 @@ id="collection-5c0f4de989858336ab2a0c0c">
 
       <div id="headerWrapper">
         <header id="header">
-
           <div id="topNavMobile">
             <nav id="mobileMenuLink" class="main-nav clear">
               <ul>
@@ -539,171 +425,74 @@ id="collection-5c0f4de989858336ab2a0c0c">
               </ul>
             </nav>
           </div>
-
           <div id="logo" data-content-field="site-title">
-
             <h1 class="logo site-title">
               <a href="/">
-
-                  Hello, I'm Shagun
-
+                Hello, I'm Shagun
               </a>
             </h1>
-
             <div class="logo-subtitle">And this is my story</div>
-
-
           </div>
-
           <script>
             Y.use('squarespace-ui-base', function(Y) {
               Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
             });
           </script>
-
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
-
                 <li class="folder-collection folder">
-
-
-
                   <a>UX</a>
                   <div class="subnav">
                     <ul>
-
-
                       <li class="page-collection">
                         <a href="/creativity-project">Creativity Project</a>
                       </li>
-
-
-
-
                       <li class="page-collection">
                         <a href="/expo">Brooklyn Craft Expo</a>
                       </li>
-
-
-
-
                       <li class="page-collection">
                         <a href="/barter-out">Barter Out</a>
                       </li>
-
-
-
                     </ul>
                   </div>
-
-
-
                 </li>
-
-
-
                 <li class="folder-collection folder active-link active-folder">
-
-
-
                   <a>ART</a>
                   <div class="subnav">
                     <ul>
-
-
-                      <li class="gallery-collection active-link">
+                      <li class="gallery-collection">
                         <a href="/gallery">Gallery</a>
                       </li>
-
-
-
-
-                      <li class="page-collection">
+                      <li class="page-collection active-link">
                         <a href="/video">Sound & Video</a>
                       </li>
-
-
-
                     </ul>
                   </div>
-
-
-
                 </li>
-
-
               </ul>
-
             </nav>
-
             <nav id="secondaryNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-
-
                 <li class="page-collection">
-
-
-
-
                   <a href="/about-me">About Me</a>
-
-
-
-
-
-
                 </li>
-
-
-
                 <li class="page-collection">
-
-
-
-
                   <a href="/resume-1">Resume</a>
-
-
-
-
-
-
                 </li>
-
-
-
                 <li class="page-collection">
-
-
-
-
                   <a href="/contact">Contact</a>
-
-
-
-
-
-
                 </li>
-
-
               </ul>
-
             </nav>
           </div>
-
           <div class="sqs-layout sqs-grid-1 columns-1 empty" data-layout-label="Header Content" data-type="block-field" id="headerBlocks">
             <div class="row sqs-row">
               <div class="col sqs-col-1 span-1"></div>
             </div>
           </div>
 
-
-
           <div id="footerBlocks-2" class="social-links sqs-svg-icon--list" data-content-field="connected-accounts">
-
             <a href="http://www.linkedin.com/in/shagunbose" target="_blank" class="sqs-svg-icon--wrapper linkedin">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -712,7 +501,6 @@ id="collection-5c0f4de989858336ab2a0c0c">
                 </svg>
               </div>
             </a>
-
             <a href="https://twitter.com/BoseShagun" target="_blank" class="sqs-svg-icon--wrapper twitter">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -721,7 +509,6 @@ id="collection-5c0f4de989858336ab2a0c0c">
                 </svg>
               </div>
             </a>
-
             <a href="https://dribbble.com/shagunbose" target="_blank" class="sqs-svg-icon--wrapper dribbble">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -730,7 +517,6 @@ id="collection-5c0f4de989858336ab2a0c0c">
                 </svg>
               </div>
             </a>
-
             <a href="https://github.com/shagunBose" target="_blank" class="sqs-svg-icon--wrapper github">
               <div>
                 <svg class="sqs-svg-icon--social" viewBox="0 0 64 64">
@@ -739,11 +525,7 @@ id="collection-5c0f4de989858336ab2a0c0c">
                 </svg>
               </div>
             </a>
-
           </div>
-
-
-
         </header>
       </div>
 
