Removed squarespace font thing

--- a/site/creativity-project/index.html
+++ b/site/creativity-project/index.html
@@ -12,7 +12,7 @@
   <base href="">
   <meta charset="utf-8" />
   <title>Creativity Project &mdash; Shagun Bose</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://static1.squarespace.com/static/5b928e47f407b4642d668c5d/t/5b9fe7eb758d4632e8107645/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="canonical" href="https://www.shagunbose.com/creativity-project" />
   <meta property="og:site_name" content="Hello, I'm Shagun" />
   <meta property="og:title" content="Creativity Project &mdash; Shagun Bose" />
@@ -442,11 +442,6 @@ id="collection-5bc36fa2652deab94f1f348e">
               </a> </h1>
             <div class="logo-subtitle">And this is my story</div>
           </div>
-          <script>
-            Y.use('squarespace-ui-base', function(Y) {
-              Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
-            });
-          </script>
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
