--- a/site/gallery/index.html
+++ b/site/gallery/index.html
@@ -12,7 +12,7 @@
   <base href="">
   <meta charset="utf-8" />
   <title>Gallery &mdash; Shagun Bose</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://static1.squarespace.com/static/5b928e47f407b4642d668c5d/t/5b9fe7eb758d4632e8107645/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="canonical" href="https://www.shagunbose.com/gallery" />
   <meta property="og:site_name" content="Hello, I'm Shagun" />
   <meta property="og:title" content="Gallery &mdash; Shagun Bose" />
@@ -390,10 +390,10 @@ id="collection-5c0f4de989858336ab2a0c0c">
               <li class="mobile-folder">
                 <a href="/art-1">ART</a>
                 <ul>
-                  <li class="gallery-collection">
+                  <li class="gallery-collection active-link">
                     <a href="/gallery">Gallery</a>
                   </li>
-                  <li class="page-collection active-link">
+                  <li class="page-collection">
                     <a href="/video">Sound & Video</a>
                   </li>
                 </ul>
@@ -433,11 +433,6 @@ id="collection-5c0f4de989858336ab2a0c0c">
             </h1>
             <div class="logo-subtitle">And this is my story</div>
           </div>
-          <script>
-            Y.use('squarespace-ui-base', function(Y) {
-              Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
-            });
-          </script>
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
@@ -461,10 +456,10 @@ id="collection-5c0f4de989858336ab2a0c0c">
                   <a>ART</a>
                   <div class="subnav">
                     <ul>
-                      <li class="gallery-collection">
+                      <li class="gallery-collection active-link">
                         <a href="/gallery">Gallery</a>
                       </li>
-                      <li class="page-collection active-link">
+                      <li class="page-collection">
                         <a href="/video">Sound & Video</a>
                       </li>
                     </ul>
