--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
   <base href="">
   <meta charset="utf-8" />
   <title>Shagun Bose</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://static1.squarespace.com/static/5b928e47f407b4642d668c5d/t/5b9fe7eb758d4632e8107645/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="canonical" href="https://www.shagunbose.com" />
   <meta property="og:site_name" content="Hello, I'm Shagun" />
   <meta property="og:title" content="Shagun Bose" />
@@ -552,12 +552,6 @@ id="collection-5b92f28d0e2e72baf566193b">
             <div class="logo-subtitle">And this is my story</div>
 
           </div>
-
-          <script>
-            Y.use('squarespace-ui-base', function(Y) {
-              Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
-            });
-          </script>
 
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
