--- a/site/video/index.html
+++ b/site/video/index.html
@@ -11,7 +11,7 @@
   <base href="">
   <meta charset="utf-8" />
   <title>Sound &amp; Video &mdash; Shagun Bose</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://static1.squarespace.com/static/5b928e47f407b4642d668c5d/t/5b9fe7eb758d4632e8107645/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="canonical" href="https://www.shagunbose.com/video" />
   <meta property="og:site_name" content="Hello, I'm Shagun" />
   <meta property="og:title" content="Sound &amp; Video &mdash; Shagun Bose" />
@@ -428,11 +428,6 @@ id="collection-5b95bf2870a6adfadf4500ac">
             </h1>
             <div class="logo-subtitle">And this is my story</div>
           </div>
-          <script>
-            Y.use('squarespace-ui-base', function(Y) {
-              Y.one("h1.logo").plug(Y.Squarespace.TextShrink);
-            });
-          </script>
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
