Removed typekit references

--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
   <base href="">
   <meta charset="utf-8" />
   <title>Shagun Bose</title>
-  <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="canonical" href="https://www.shagunbose.com" />
   <meta property="og:site_name" content="Hello, I'm Shagun" />
   <meta property="og:title" content="Shagun Bose" />
@@ -33,12 +33,6 @@
 into the intersection between technology and human motivation. Shagun is a
 student at the University of Rochester double majoring in Computer Science
 and Psychology." />
-  <script type="text/javascript" src="//use.typekit.net/ik/Gv52b70AtzsInjPMut4v9eJatKQ4RSqbfCYESOaLDyCfenSffFHN4UJLFRbh52jhWDmK5QJtZQbaZRb3FhJXFRbkZ2jh5ewuZg7fMPG0ShyyZam0jcNDZPoDSWmyScmDSeBRZPoRdhXCdeNRjAUGdaFXOYFGjAiudc4zSh90jhNlOYFGjAiudc4zSh90SaBujW48Sagyjh90jhNlOYiaikoD-eB1iAoKdaF8OcFzdPUaiaS0ShyyZam0jcNDZPoDSWmyScmDSeBRZPoRdhXK2YgkdayTdAIldcNhjPJsj14ydcszdKu1ScNXZWFUiA97fbRKHyMMeMw6MKG4fHvgIMMjgfMfH6GJCwbgIMMjgPMfH6qJnbIbMg6eJMJ7fbKOMsMMeMS6MKGHfOYIMsMMeMv6MKG4fJ3gIMMjIPMfH6qJl8MbMs6IJMJ7fbKt9gMgeMS6MTMgDOQFaM9.js"></script>
-  <script type="text/javascript">
-    try {
-      Typekit.load();
-    } catch (e) {}
-  </script>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:700,700i,400i,400" />
   <script type="text/javascript">
     SQUARESPACE_ROLLUPS = {};
@@ -51,8 +45,6 @@ and Psychology." />
       rollups[name].js = ["//assets.squarespace.com/universal/scripts-compressed/common-e45a9df2c24c825438c21-min.en-US.js"];
     })(SQUARESPACE_ROLLUPS, 'squarespace-common');
   </script>
-  <script crossorigin="anonymous" src="//assets.squarespace.com/universal/scripts-compressed/common-e45a9df2c24c825438c21-min.en-US.js"></script>
-  <script crossorigin="anonymous" src="//assets.squarespace.com/universal/scripts-compressed/performance-2641bb4c4d35c84dfc854-min.en-US.js" defer></script>
   <script data-name="static-context">
     Static = window.Static || {};
     Static.SQUARESPACE_CONTEXT = {
@@ -362,11 +354,7 @@ and Psychology." />
     Squarespace.load(window);
   </script>
   <script type="application/ld+json">{"url":"https://www.shagunbose.com","name":"Hello, I'm Shagun","description":"","@context":"http://schema.org","@type":"WebSite"}</script>
-  <!--[if gte IE 9]> <link rel="stylesheet" type="text/css" href="../site.css&part=1"/><link rel="stylesheet" type="text/css" href="../site.css&part=2"/><link rel="stylesheet" type="text/css" href="../site.css&part=3"/><link rel="stylesheet" type="text/css" href="../site.css&part=4"/><![endif]-->
-  <!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="../site.css&noMedia=true&part=1"/><link rel="stylesheet" type="text/css" href="../site.css&noMedia=true&part=2"/><link rel="stylesheet" type="text/css" href="../site.css&noMedia=true&part=3"/><link rel="stylesheet" type="text/css" href="../site.css&noMedia=true&part=4"/><![endif]-->
-  <!--[if !IE]> -->
   <link rel="stylesheet" type="text/css" href="site.css" />
-  <!-- <![endif]-->
   <style>
     body {
       overflow: hidden;
