--- a/site/ur-eats/index.html
+++ b/site/ur-eats/index.html
@@ -27,12 +27,6 @@
   <meta name="twitter:url" content="https://www.shagunbose.com/ur-eats" />
   <meta name="twitter:card" content="summary" />
   <meta name="description" content="" />
-  <script type="text/javascript" src="//use.typekit.net/ik/Gv52b70AtzsInjPMut4v9eJatKQ4RSqbfCYESOaLDyCfenSffFHN4UJLFRbh52jhWDmK5QJtZQbaZRb3FhJXFRbkZ2jh5ewuZg7fMPG0ShyyZam0jcNDZPoDSWmyScmDSeBRZPoRdhXCdeNRjAUGdaFXOYFGjAiudc4zSh90jhNlOYFGjAiudc4zSh90SaBujW48Sagyjh90jhNlOYiaikoD-eB1iAoKdaF8OcFzdPUaiaS0ShyyZam0jcNDZPoDSWmyScmDSeBRZPoRdhXK2YgkdayTdAIldcNhjPJsj14ydcszdKu1ScNXZWFUiA97fbRKHyMMeMw6MKG4fHvgIMMjgfMfH6GJCwbgIMMjgPMfH6qJnbIbMg6eJMJ7fbKOMsMMeMS6MKGHfOYIMsMMeMv6MKG4fJ3gIMMjIPMfH6qJl8MbMs6IJMJ7fbKt9gMgeMS6MTMgDOQFaM9.js"></script>
-  <script type="text/javascript">
-    try {
-      Typekit.load();
-    } catch (e) {}
-  </script>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:700,700i,400i,400" />
   <script type="text/javascript">
     SQUARESPACE_ROLLUPS = {};
@@ -529,7 +523,7 @@ id="collection-5d8d5dca3e752448bd8d1267">
           <div id="topNav" data-content-field="navigation">
             <nav id="mainNavigation" class="main-nav dropdown-click desktop-nav">
               <ul>
-                <li class="folder-collection folder active-folder">
+                <li class="folder-collection folder active-link active-folder">
                   <a>UX</a>
                   <div class="subnav">
                     <ul>
